[tool.poetry]
name = "tl-evalkit"
version = "0.1.0"
description = ""
authors = ["ranhomri <ran.homri@tensorleap.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
tensorflow-macos = "2.12.0"
torch = ">= 1.4.0, <= 2.1.0"
code-loader = "^1.0"
matplotlib = ">= 3.3.4"
opencv-python = "^4.5.5"
scikit-image = "^0.19.2"

[tool.poetry.group.dev.dependencies]
black = "23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
